--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
 		"@types/react": "~18.0.14",
+		"babel-plugin-module-resolver": "^5.0.0",
 		"eslint": "^8.41.0",
 		"typescript": "^4.9.4"
 	},
