--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,18 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "@types/*": ["./src/@types/*"],
+      "@core/*": ["./src/core/*"],
+      "@utils/*": ["./src/core/utils/*"],
+      "@storage/*": ["./src/core/storage/*"],
+      "@images/*": ["./src/core/assets/images/*"],
+      "@theme/*": ["./src/core/assets/theme/*"],
+      "@routes/*": ["./src/routes/*"],
+      "@screens/*": ["./src/screens/*"],
+      "@components/*": ["./src/components/*"],
+    }
   }
 }
