feat: refatorar estilos do projeto

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "strict": true,
     "baseUrl": "./",
     "paths": {
-      "@types/*": ["./src/@types/*"],
+      "@types_/*": ["./src/@types/*"],
       "@core/*": ["./src/core/*"],
       "@helpers/*": ["./src/core/helpers/*"],
       "@storage/*": ["./src/core/storage/*"],
