feat: ajustar tratamento de erro no app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
     "baseUrl": "./",
     "paths": {
       "@types_/*": ["./src/@types/*"],
+      "@assets/*": ["./src/core/assets/*"],
       "@helpers/*": ["./src/core/helpers/*"],
       "@storage/*": ["./src/core/storage/*"],
+      "@utils/*": ["./src/core/utils/*"],
       "@images/*": ["./src/core/assets/images/*"],
       "@screens/*": ["./src/screens/*"],
       "@components/*": ["./src/components/*"],
